test: added tests for new features